--- a/_config.yml
+++ b/_config.yml
@@ -33,13 +33,13 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 theme: minima
 # remote_theme: jekyll/minima
 
-# lsi: false
-# safe: true
-# source: maratona-ufv
-# incremental: false
-# domain: lucasnfe.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
-# url: https://lucasnfe.github.io  # the base hostname and protocol for your site, e.g. http://example.com
-# baseurl: maratona-ufv            # place folder name if the site is served in a subfolder
+lsi: false
+safe: true
+source: maratona-ufv
+incremental: false
+domain: lucasnfe.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
+url: https://lucasnfe.github.io  # the base hostname and protocol for your site, e.g. http://example.com
+baseurl: maratona-ufv            # place folder name if the site is served in a subfolder
 
 plugins:
   - jekyll-feed
