--- a/_config.yml
+++ b/_config.yml
@@ -1,65 +1,52 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you: 
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
 # Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-
-title: Maratona de Programação UFV
-email: maratona@ufv.br
-description: >- # this means to ignore newlines until "baseurl:"
-  A Maratona de Programação do Departamento de Informática da Universidade Federal
-  de Viçosa é um evento de extensão que acontece anualmente como parte da Semana de Informática do curso de
-  Ciência da Computação. 
+title: Maratona da SI 2024
+description: Universidade Federal de Viçosa
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-# twitter_username: jekyllrb
-# github_username:  jekyll
+
+# Workshop date
+workshop_date: 19 de Outubro de 2024
 
 # Build settings
-theme: minima
-# remote_theme: jekyll/minima
-
-lsi: false
-safe: true
-source: maratona-ufv
-incremental: false
-domain: lucasnfe.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
-url: https://lucasnfe.github.io  # the base hostname and protocol for your site, e.g. http://example.com
-baseurl: maratona-ufv            # place folder name if the site is served in a subfolder
-
+markdown: kramdown
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+# Exclude from processing
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
+
+# Custom variables
+twitter_username: EXAG_Workshop
+youtube_channel: UCXXXXXXXXXXXXXXXXXXXXXXXX
+
+# Collections
+collections:
+  announcements:
+    output: true
+  papers:
+    output: true
+
+# Defaults
+defaults:
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
+    values:
+      layout: "default"
+
+# Additional settings
+timezone: UTC
+encoding: "utf-8"
+lang: "en"
