--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ source: maratona-si
 incremental: false
 
 # Workshop date
-workshop_date: 17 de Outubro de 2024
+workshop_date: 27 de agosto de 2025
 
 # Build settings
 markdown: kramdown
